250525 보관함 조회 분리 - 수신보관함, 송신보관함